adds favicon and preview

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property="og:title" content="My Portfolio by Olu Akani" />
+  <meta property="og:description" content="A portfolio showcasing my Product Managment and Development Skills." />
+  <meta property="og:image" content="https://oakani1.github.io/Olu-Akani-Portfolio/assets/images/laptop.svg" />
+  <meta property="og:url" content="https://oakani1.github.io/Olu-Akani-Portfolio/">
+  <meta property="og:type" content="website" />
   <title>Portfolio</title>
 
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
@@ -13,6 +18,7 @@
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <div class="overflow-hidden">
