--- a/projects.html
+++ b/projects.html
@@ -7,10 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:title" content="My Portfolio by Olu Akani" />
   <meta property="og:description" content="A portfolio showcasing my Product Managment and Development Skills." />
-  <meta property="og:image" content="https://oakani1.github.io/Olu-Akani-Portfolio/assets/images/laptop.svg" />
-  <meta property="og:url" content="https://oakani1.github.io/Olu-Akani-Portfolio/">
+  <meta property="og:image" content="https://oluakani-portfolio.com/assets/images/plus8.svg" />
+  <meta property="og:url" content="https://oluakani-portfolio.com/">
   <meta property="og:type" content="website" />
-  <title>Portfolio</title>
+  <title>Portfolio Projects</title>
 
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
