--- a/projects.html
+++ b/projects.html
@@ -489,7 +489,7 @@
                 </span></span>Development
             </h2>
           </div>
-          <div class="row align-items-stretch">
+          <div class="row align-items-center">
             <!--Tasker-->
             <div class="col-12">
               <div class="wrapper__project new-purple mb-5 " data-aos="fade-left" data-aos-duration="1000"
@@ -530,8 +530,10 @@
                 </div>
               </div>
             </div>
+          </div>
         
-        <div class="row align-items-stretch">
+           
+        <div class="row align-items-center justify-content-center">
           <!--Code Institute-->
           <div class="col-12">
             <div class="wrapper__project bg_orange_v2 mb-5 " data-aos="fade-right" data-aos-duration="1000"
