--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:title" content="My Portfolio by Olu Akani" />
   <meta property="og:description" content="A portfolio showcasing my Product Managment and Development Skills." />
-  <meta property="og:image" content="https://oluakani-portfolio.com/assets/images/plus8.svg" />
+  <meta property="og:image" content="https://oluakani-portfolio.com/assets/images/Preview.png" />
   <meta property="og:url" content="https://oluakani-portfolio.com/">
   <meta property="og:type" content="website" />
   <title>Portfolio</title>
