--- a/tasker.html
+++ b/tasker.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:title" content="My Portfolio by Olu Akani" />
   <meta property="og:description" content="A portfolio showcasing my Product Managment and Development Skills." />
-  <meta property="og:image" content="https://oakani1.github.io/Olu-Akani-Portfolio/assets/images/laptop.svg" />
-  <meta property="og:image" content="https://oluakani-portfolio.com/assets/images/plus8.svg" />
+  <meta property="og:image" content="https://oluakani-portfolio.com/assets/images/Preview.png" />
   <meta property="og:url" content="https://oluakani-portfolio.com/">
+  <meta property="og:type" content="website" />
   <title>Portfolio Tasker app</title>
 
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
