--- a/libre.html
+++ b/libre.html
@@ -22,59 +22,57 @@
 </head>
 
 <body>
-  <div class="overflow-hidden">
+  <div class ="sticky-top shadow-sm bg__gray-2">
+    <nav class="navbar navbar-expand-lg wrapper__navbar position-relative z-3 sticky-top" data-aos="fade-down"
+    data-aos-duration="1000" data-aos-delay="300">
+    <div class="container position-relative">
+      <a class="navbar-brand" href="#">
+        <img src="./assets/images/LOGO.svg" alt="" />
+      </a>
+      <button class="navbar-toggler nav__button position-relative" type="button" data-toggle="collapse"
+        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+  
+      <div class="collapse navbar-collapse wrapper__navbar-menu center " id="navbarSupportedContent">
+        <ul class="navbar-nav menu__center">
+  
+          <li class="nav-item">
+            <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1 active" href="index.html">
+              home
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1" href="index.html#about">
+              about me
+            </a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1 dropdown-toggle" href="#"
+              id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Portfolio Projects
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item bold font__size--12 text__12-md color__gray-1" href="projects.html">All</a>
+              <a class="dropdown-item bold font__size--12 text__12-md color__gray-1"
+                href="projects.html#hardware-projects">Hardware</a>
+              <a class="dropdown-item bold font__size--12 text__12-md color__gray-1"
+                href="projects.html#digital-projects">Digital</a>
+              <a class="dropdown-item bold font__size--12 text__12-md color__gray-1"
+                href="projects.html#fullstack-projects">Fullstack</a>
+              <a class="dropdown-item bold font__size--12 text__12-md color__gray-1" href="">Design (Coming soon)</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  </div>
+  
     <div class="bg__gray-2 position-relative">
-      <nav class="navbar navbar-expand-lg wrapper__navbar position-relative z-3 sticky-top" data-aos="fade-down"
-        data-aos-duration="1000" ddata-aos-delay="300">
-        <div class="container position-relative">
-          <a class="navbar-brand" href="index.html">
-            <img src="./assets/images/LOGO.svg" alt="" />
-          </a>
-          <button class="navbar-toggler nav__button position-relative" type="button" data-toggle="collapse"
-            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span></span>
-            <span></span>
-            <span></span>
-          </button>
-
-          <div class="collapse navbar-collapse wrapper__navbar-menu center " id="navbarSupportedContent">
-            <ul class="navbar-nav menu__center">
-
-              <li class="nav-item">
-                <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1 active"
-                  href="index.html">
-                  home
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1"
-                  href="index.html#about">
-                  about me
-                </a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1 dropdown-toggle"
-                  href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-                  aria-expanded="false">
-                  Portfolio Projects
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item bold font__size--12 text__12-md color__gray-1" href="projects.html">All</a>
-                  <a class="dropdown-item bold font__size--12 text__12-md color__gray-1"
-                    href="projects.html#hardware-projects">Hardware</a>
-                  <a class="dropdown-item bold font__size--12 text__12-md color__gray-1"
-                    href="projects.html#digital-projects">Digital</a>
-                  <a class="dropdown-item bold font__size--12 text__12-md color__gray-1"
-                    href="projects.html#fullstack-projects">Fullstack</a>
-                  <a class="dropdown-item bold font__size--12 text__12-md color__gray-1" href="">Design (Coming
-                    soon)</a>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
 
           <!--Project details-->
           <section class="position-relative pt-4 pb-3">
