fixes side ways scroll

--- a/projects.html
+++ b/projects.html
@@ -72,8 +72,8 @@
   </nav>
   </div>
   
+  <div class="overflow-hidden">
     <div class="bg__gray-2 position-relative">
-
       <section class="position-relative z-2">
         <div class="container position-relative z-2">
           <div class="row justify-content-center">
@@ -579,26 +579,26 @@
     </section>
 
 
-    <!--Contact me-->
-    <section class="p-0">
-      <div class="container">
-        <div class="wrapper__contat-us position-relative bg__softblue" data-aos="fade-up" data-aos-duration="1000"
-          data-aos-delay="200">
-          <img src="./assets/images/Mask group (1).png" class="path__4" alt="" />
-          <div class="position-relative z-2">
-            <h2 class="bold font__size--65 text__60-1024 text__60-sm text__60-xxs mb-4">
-              Do you think <br />
-              <span class="position-relative path__3 extra"><span class="position-relative z-2">I'm a good
-                  fit?</span></span>
-            </h2>
+  <!--Contact me-->
+  <section class="p-0">
+    <div class="container">
+      <div class="wrapper__contat-us position-relative bg__softblue" data-aos="fade-up" data-aos-duration="1000"
+        data-aos-delay="200">
+        <img src="./assets/images/Mask group (1).png" class="path__4" alt="" />
+        <div class="position-relative z-2">
+          <h2 class="bold font__size--65 text__60-1024 text__60-sm text__60-xxs mb-4">
+            Do you think <br />
+            <span class="position-relative path__3 extra"><span class="position-relative z-2">I'm a good
+                fit?</span></span>
+          </h2>
 
-            <a href="https://www.linkedin.com/in/oluakani/"
-              class="bold font__size--14 text__14-1024 btn btn__white color__black shadow rounded-50"
-              target="blank">Contact me on LinkedIn</a>
-          </div>
+          <a href="https://www.linkedin.com/in/oluakani/"
+            class="bold font__size--14 text__14-1024 btn btn__white color__black shadow rounded-50"
+            target="blank">Contact me on LinkedIn</a>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
     <section class="py-4">
       <div class="container text-center">
