--- a/anfanifi.html
+++ b/anfanifi.html
@@ -71,7 +71,7 @@
     </div>
   </nav>
   </div>
-  
+  <div class="overflow-hidden">
     <div class="bg__gray-2 position-relative">
       <!--Project details-->
       <section class="position-relative pt-4 pb-3">
