--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
+<body>
+  
 <div class ="sticky-top shadow-sm bg__gray-2">
   <nav class="navbar navbar-expand-lg wrapper__navbar position-relative z-3 sticky-top" data-aos="fade-down"
   data-aos-duration="1000" data-aos-delay="300">
@@ -70,7 +72,7 @@
   </div>
 </nav>
 </div>
-
+<div class="overflow-hidden">
   <div class="bg__gray-2 position-relative">
     <section class="position-relative pt-4 pb-3">
       <div class="container position-relative z-2">
