--- a/libre.html
+++ b/libre.html
@@ -72,6 +72,7 @@
   </nav>
   </div>
   
+  <div class="overflow-hidden">
     <div class="bg__gray-2 position-relative">
 
           <!--Project details-->
