--- a/tasker.html
+++ b/tasker.html
@@ -72,6 +72,7 @@
   </nav>
   </div>
   
+  <div class="overflow-hidden">
     <div class="bg__gray-2 position-relative">
       <!--Project details-->
       <section class="position-relative pt-4 pb-3">
