adds sky page start

--- a/index.html
+++ b/index.html
@@ -342,9 +342,49 @@
           </div>
         </div>
       </div>
+          <!--Linksys-->
+          <div class="row align-items-stretch">
+            <div class="col-12">
+              <div class="wrapper__project deep_blue mb-5 " data-aos="fade-left" data-aos-duration="1000"
+                data-aos-delay="200">
+                <div class="row justify-content-between justify-content-xl-center">
+                  <div class="col-12 col-md-6 col-xl-6 p-lg-5 m-0 p-0 pb-3 m-md-2 align-items-center">
+                    <img src="./assets/images/sky_tv.png" alt="" />
+                  </div>
+                  <div class="col-12 col-md-5 col-xl-3 mb-5 my-md-auto px-0">
+                    <h4 class="bold font__size--40 text__40-1024 text__40-mm color__white mb-1">
+                      SKY
+                    </h4>
+                    <p class="tile-sub mt-1">
+                      Closed Captions Project
+                    </p>
+                    <div class="category d-flex align-items-center flex-wrap mb-2 mb-md-2">
+                      <div class="item medium font__size--14 text__14-1024 color__white">
+                        Market Research
+                      </div>
+                      <div class="item medium font__size--14 text__14-1024 color__white">
+                        Ideation
+                      </div>
+                      <div class="item medium font__size--14 text__14-1024 color__white">
+                        UX Design
+                      </div>
+                      <div class="item medium font__size--14 text__14-1024 color__white">
+                        UX Testing
+                      </div>
 
+                    </div>
+                    <a href="sky.html" class="d-flex align-items-center bold font__size--16 text__16-1024 color__white">Find out more
+                      <img src="./assets/images/Arrow 7.png" class="ml-3" alt="" />
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
     </div>
+
+    
   </section>
   <!--Featured ends-->
 
