--- a/projects.html
+++ b/projects.html
@@ -22,56 +22,56 @@
 </head>
 
 <body>
-  <div class ="sticky-top shadow-sm bg__gray-2">
+  <div class="sticky-top shadow-sm bg__gray-2">
     <nav class="navbar navbar-expand-lg wrapper__navbar position-relative z-3 sticky-top" data-aos="fade-down"
-    data-aos-duration="1000" data-aos-delay="300">
-    <div class="container position-relative">
-      <a class="navbar-brand" href="#">
-        <img src="./assets/images/LOGO.svg" alt="" />
-      </a>
-      <button class="navbar-toggler nav__button position-relative" type="button" data-toggle="collapse"
-        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-  
-      <div class="collapse navbar-collapse wrapper__navbar-menu center " id="navbarSupportedContent">
-        <ul class="navbar-nav menu__center">
-  
-          <li class="nav-item">
-            <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1 active" href="index.html">
-              home
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1" href="index.html#about">
-              about me
-            </a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1 dropdown-toggle" href="#"
-              id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Portfolio Projects
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item bold font__size--12 text__12-md color__gray-1" href="projects.html">All</a>
-              <a class="dropdown-item bold font__size--12 text__12-md color__gray-1"
-                href="projects.html#hardware-projects">Hardware</a>
-              <a class="dropdown-item bold font__size--12 text__12-md color__gray-1"
-                href="projects.html#digital-projects">Digital</a>
-              <a class="dropdown-item bold font__size--12 text__12-md color__gray-1"
-                href="projects.html#fullstack-projects">Fullstack</a>
-              <a class="dropdown-item bold font__size--12 text__12-md color__gray-1" href="">Design (Coming soon)</a>
-            </div>
-          </li>
-        </ul>
+      data-aos-duration="1000" data-aos-delay="300">
+      <div class="container position-relative">
+        <a class="navbar-brand" href="#">
+          <img src="./assets/images/LOGO.svg" alt="" />
+        </a>
+        <button class="navbar-toggler nav__button position-relative" type="button" data-toggle="collapse"
+          data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+          aria-label="Toggle navigation">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+
+        <div class="collapse navbar-collapse wrapper__navbar-menu center " id="navbarSupportedContent">
+          <ul class="navbar-nav menu__center">
+
+            <li class="nav-item">
+              <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1 active" href="index.html">
+                home
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1" href="index.html#about">
+                about me
+              </a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1 dropdown-toggle" href="#"
+                id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Portfolio Projects
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item bold font__size--12 text__12-md color__gray-1" href="projects.html">All</a>
+                <a class="dropdown-item bold font__size--12 text__12-md color__gray-1"
+                  href="projects.html#hardware-projects">Hardware</a>
+                <a class="dropdown-item bold font__size--12 text__12-md color__gray-1"
+                  href="projects.html#digital-projects">Digital</a>
+                <a class="dropdown-item bold font__size--12 text__12-md color__gray-1"
+                  href="projects.html#fullstack-projects">Fullstack</a>
+                <a class="dropdown-item bold font__size--12 text__12-md color__gray-1" href="">Design (Coming soon)</a>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
   </div>
-  
+
   <div class="overflow-hidden">
     <div class="bg__gray-2 position-relative">
       <section class="position-relative z-2">
@@ -91,7 +91,8 @@
               </h1>
               <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600"
                 class="medium font__size--16 text__16-1024 color__gray-1 mb-4">
-                Welcome to my portfolio! Discover my passion for creating innovative solutions through hardware, software, and UX design.
+                Welcome to my portfolio! Discover my passion for creating innovative solutions through hardware,
+                software, and UX design.
 
               </p>
             </div>
@@ -304,14 +305,14 @@
               </div>
             </div>
           </div>
+          <!--Linksys-->
           <div class="row align-items-stretch">
-            <!--Linksys-->
             <div class="col-12">
               <div class="wrapper__project bg__black mb-5 " data-aos="fade-left" data-aos-duration="1000"
                 data-aos-delay="200">
                 <div class="row justify-content-between justify-content-xl-center">
                   <div class="col-12 col-md-6 col-xl-6 p-lg-5 m-0 p-0 pb-3 m-md-2 align-items-center">
-                    <img src="./assets/images/mx4200.png" alt=""/>
+                    <img src="./assets/images/mx4200.png" alt="" />
                   </div>
                   <div class="col-12 col-md-5 col-xl-3 mb-5 my-md-auto px-0">
                     <h4 class="bold font__size--40 text__40-1024 text__40-mm color__white mb-1">
@@ -345,6 +346,7 @@
                 </div>
               </div>
             </div>
+          </div>
         </section>
 
         <!--Digital-->
@@ -464,7 +466,7 @@
                           </div>
                         </div>
                         <div>
-                          <a href="#!"
+                          <a href="sky.html"
                             class="d-flex align-items-center bold font__size--16 text__16-1024 color__white">Coming
                             Soon
                             <img src="./assets/images/Arrow 7.png" class="ml-3" alt="" />
@@ -533,99 +535,99 @@
               </div>
             </div>
           </div>
-        
-           
-        <div class="row align-items-center justify-content-center">
-          <!--Code Institute-->
-          <div class="col-12">
-            <div class="wrapper__project bg_orange_v2 mb-5 " data-aos="fade-right" data-aos-duration="1000"
-              data-aos-delay="200">
-              <div class="row justify-content-between justify-content-xl-center">
-                <div class="col-12 col-md-6 col-xl-6 p-lg-5 m-0 p-0 pb-3 m-md-2 align-items-center">
-                  <img src="./assets/images/code_institute_image.png" alt="" class="shadow-lg rounded-10" />
-                </div>
-                <div class="col-12 col-md-5 col-xl-3 mb-5 my-md-auto px-0">
-                  <h4 class="bold font__size--40 text__40-1024 text__40-mm color__white mb-1">
-                    Code Institute
-                  </h4>
-                  <p class="tile-sub mt-1">
-                    Code Institute Projects & Hackathons
-                  </p>
-                  <div class="category d-flex align-items-center flex-wrap mb-2 mb-md-2">
-                    <div class="item medium font__size--14 text__14-1024 color__white">
-                      HTML, CSS
-                    </div>
-                    <div class="item medium font__size--14 text__14-1024 color__white">
-                      Python, javascript
-                    </div>
-                    <div class="item medium font__size--14 text__14-1024 color__white">
-                      Bootstrap
-                    </div>
-                    <div class="item medium font__size--14 text__14-1024 color__white">
-                      Development
-                    </div>
-                    <div class="item medium font__size--14 text__14-1024 color__white">
-                      Agile
-                    </div>
+
+
+          <div class="row align-items-center justify-content-center">
+            <!--Code Institute-->
+            <div class="col-12">
+              <div class="wrapper__project bg_orange_v2 mb-5 " data-aos="fade-right" data-aos-duration="1000"
+                data-aos-delay="200">
+                <div class="row justify-content-between justify-content-xl-center">
+                  <div class="col-12 col-md-6 col-xl-6 p-lg-5 m-0 p-0 pb-3 m-md-2 align-items-center">
+                    <img src="./assets/images/code_institute_image.png" alt="" class="shadow-lg rounded-10" />
                   </div>
-                  <a href="" class="d-flex align-items-center bold font__size--16 text__16-1024 color__white">Coming
-                    soon
-                    <img src="./assets/images/Arrow 7.png" class="ml-3" alt="" />
-                  </a>
+                  <div class="col-12 col-md-5 col-xl-3 mb-5 my-md-auto px-0">
+                    <h4 class="bold font__size--40 text__40-1024 text__40-mm color__white mb-1">
+                      Code Institute
+                    </h4>
+                    <p class="tile-sub mt-1">
+                      Code Institute Projects & Hackathons
+                    </p>
+                    <div class="category d-flex align-items-center flex-wrap mb-2 mb-md-2">
+                      <div class="item medium font__size--14 text__14-1024 color__white">
+                        HTML, CSS
+                      </div>
+                      <div class="item medium font__size--14 text__14-1024 color__white">
+                        Python, javascript
+                      </div>
+                      <div class="item medium font__size--14 text__14-1024 color__white">
+                        Bootstrap
+                      </div>
+                      <div class="item medium font__size--14 text__14-1024 color__white">
+                        Development
+                      </div>
+                      <div class="item medium font__size--14 text__14-1024 color__white">
+                        Agile
+                      </div>
+                    </div>
+                    <a href="" class="d-flex align-items-center bold font__size--16 text__16-1024 color__white">Coming
+                      soon
+                      <img src="./assets/images/Arrow 7.png" class="ml-3" alt="" />
+                    </a>
+                  </div>
                 </div>
               </div>
             </div>
+        </section>
+
+
+        <!--Contact me-->
+        <section class="p-0">
+          <div class="container">
+            <div class="wrapper__contat-us position-relative bg__softblue" data-aos="fade-up" data-aos-duration="1000"
+              data-aos-delay="200">
+              <img src="./assets/images/Mask group (1).png" class="path__4" alt="" />
+              <div class="position-relative z-2">
+                <h2 class="bold font__size--65 text__60-1024 text__60-sm text__60-xxs mb-4">
+                  Do you think <br />
+                  <span class="position-relative path__3 extra"><span class="position-relative z-2">I'm a good
+                      fit?</span></span>
+                </h2>
+
+                <a href="https://www.linkedin.com/in/oluakani/"
+                  class="bold font__size--14 text__14-1024 btn btn__white color__black shadow rounded-50"
+                  target="blank">Contact me on LinkedIn</a>
+              </div>
+            </div>
           </div>
-    </section>
+        </section>
 
+        <section class="py-4">
+          <div class="container text-center">
+            <ul class="list__sosmed">
+              <li>
+                <a href="https://www.linkedin.com/in/oluakani/" target="blank"><img src="./assets/images/linkedin.svg"
+                    alt="" /></a>
+              </li>
+              <li>
+                <a href="https://github.com/Oakani1" target="blank"><img src="./assets/images/github.svg" alt="" /></a>
+              </li>
 
-  <!--Contact me-->
-  <section class="p-0">
-    <div class="container">
-      <div class="wrapper__contat-us position-relative bg__softblue" data-aos="fade-up" data-aos-duration="1000"
-        data-aos-delay="200">
-        <img src="./assets/images/Mask group (1).png" class="path__4" alt="" />
-        <div class="position-relative z-2">
-          <h2 class="bold font__size--65 text__60-1024 text__60-sm text__60-xxs mb-4">
-            Do you think <br />
-            <span class="position-relative path__3 extra"><span class="position-relative z-2">I'm a good
-                fit?</span></span>
-          </h2>
+            </ul>
+          </div>
+        </section>
 
-          <a href="https://www.linkedin.com/in/oluakani/"
-            class="bold font__size--14 text__14-1024 btn btn__white color__black shadow rounded-50"
-            target="blank">Contact me on LinkedIn</a>
-        </div>
       </div>
-    </div>
-  </section>
 
-    <section class="py-4">
-      <div class="container text-center">
-        <ul class="list__sosmed">
-          <li>
-            <a href="https://www.linkedin.com/in/oluakani/" target="blank"><img src="./assets/images/linkedin.svg"
-                alt="" /></a>
-          </li>
-          <li>
-            <a href="https://github.com/Oakani1" target="blank"><img src="./assets/images/github.svg" alt="" /></a>
-          </li>
-
-        </ul>
-      </div>
-    </section>
-
-  </div>
-
-  <script src="assets/js/jquery.min.js"></script>
-  <script src="assets/js/bootstrap.min.js"></script>
-  <script src="assets/js/popper.min.js"></script>
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
-  <script src="assets/js/index.js"></script>
-  <script type="text/javascript">
-    // AOS.init();
-  </script>
+      <script src="assets/js/jquery.min.js"></script>
+      <script src="assets/js/bootstrap.min.js"></script>
+      <script src="assets/js/popper.min.js"></script>
+      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+      <script src="assets/js/index.js"></script>
+      <script type="text/javascript">
+        // AOS.init();
+      </script>
 </body>
 
 </html>
