fixes find out more

--- a/sky.html
+++ b/sky.html
@@ -194,7 +194,7 @@
     <!--Overview-->
 
 
-    <section class="section-sm-ptb pt-1 mb-5 mt-5">
+    <section class="section-sm-ptb pt-1 mb-5 mt-5" id="overview" >
       <div class="container ">
         <div class="text-center">
           <h2 class="bold font__size--40 text__40-1024 text__40-mm project-section-h-p" data-aos="fade-up"
