--- a/projects.html
+++ b/projects.html
@@ -467,8 +467,7 @@
                         </div>
                         <div>
                           <a href="sky.html"
-                            class="d-flex align-items-center bold font__size--16 text__16-1024 color__white">Coming
-                            Soon
+                            class="d-flex align-items-center bold font__size--16 text__16-1024 color__white">Find out more
                             <img src="./assets/images/Arrow 7.png" class="ml-3" alt="" />
                           </a>
                         </div>
