remove SKY capitals

--- a/sky.html
+++ b/sky.html
@@ -82,7 +82,7 @@
             <div class="col-12 col-lg-9 mb-5 mb-lg-l0 ">
               <h1 class="font__size--65 text__60-1024 text__60-sm text__60-xxs bold my-3" data-aos="fade-right"
                 data-aos-duration="1000" data-aos-delay="200">
-                <span class="position-relative">SKY
+                <span class="position-relative">Sky Glass
                   <img src="./assets/images/Rectangle 5.png" class="path__1" alt="" />
                 </span>
                 Closed Caption Project
@@ -93,7 +93,7 @@
               <div class="content col-12 col-md-6 col-lg-4">
                 <p class="project-detail-heading ">Client</p>
                 <p class="project-detail">
-                  SKY
+                  Sky
                 </p>
               </div>
               <div class="content col-md-6 col-lg-5">
@@ -278,11 +278,11 @@
           </div>
           <div class="col-md-6 mb-5">
             <h3 class="project-section-headings text-center text-md-left  p-0" data-aos="fade-up"
-              data-aos-duration="1000" data-aos-delay="200">
+              data-aos-duration="1000" data-aos-delay="600">
               Solution
             </h3>
 
-            <div class="p-0" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+            <div class="p-0" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
               We proposed the “Lookup and Translate” feature allowing users to
               <ul>
                 <li>Define a word</li>
@@ -313,7 +313,7 @@
             </h3>
             <p>
               The initial problem was investigated through a multi-faceted approach that included analyzing Sky's
-              Community customer complaints forum, User Personas provided by SKY and conducting in-depth user
+              Community customer complaints forum, User Personas provided by Sky and conducting in-depth user
               interviews, to understand their pains and
               gains.
               From the researech we were able to indenty several user personas who we could solve probmes for.
