fixes demo video

--- a/sky.html
+++ b/sky.html
@@ -695,15 +695,15 @@
 
                 </p>
               </div>
-              <div class="col-lg-6 d-md-flex d-lg-none align-items-center justify-content-center" data-aos="fade-up"
+              <div class="col-12 d-lg-none align-items-center justify-content-center" data-aos="fade-up"
                 data-aos-duration="1000" data-aos-delay="800">
-                <div class="embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item"
-                    src="https://www.youtube.com/embed/uea7Tx7qSl0?si=6pg0CmEj6odQZfJF" title="YouTube video player"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen>
-                  </iframe>
+                <div style="padding:56.25% 0 0 0;position:relative;"><iframe
+                  src="https://player.vimeo.com/video/1009617540?h=8c10fb65cb&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                  frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"
+                  style="position:absolute;top:0;left:0;width:100%;height:100%;"
+                  title="New Recording - 15/09/2024, 15:33:08"></iframe></div>
+              <script src="https://player.vimeo.com/api/player.js"></script>
+              </div>
                 </div>
               </div>
             </div>
