--- a/sky.html
+++ b/sky.html
@@ -194,7 +194,7 @@
     <!--Overview-->
 
 
-    <section class="section-sm-ptb pt-1 mb-5 mt-5" id="overview" >
+    <section class="section-sm-ptb pt-1 mb-5 mt-5" id="overview">
       <div class="container ">
         <div class="text-center">
           <h2 class="bold font__size--40 text__40-1024 text__40-mm project-section-h-p" data-aos="fade-up"
@@ -210,8 +210,8 @@
             </h3>
             <p>
               Sky, a leading British broadcaster and telecommunications provider, operates primarily in the United
-              Kingdom and Ireland, with additional operations in Germany, Austria, Switzerland, and Italy. It's worth
-              noting that Sky is a subsidiary of the American conglomerate Comcast, which acquired the company in 2018.
+              Kingdom and Ireland, with additional operations in Germany, Austria, Switzerland, and Italy. Sky is also a
+              subsidiary of the American conglomerate Comcast, which acquired the company in 2018.
             </p>
           </div>
           <div class="col-lg-6 d-md-flex d-lg-block align-items-center justify-content-center" data-aos="fade-up"
@@ -636,7 +636,7 @@
             <div class="row">
               <div class="col-lg-6 mb-2" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                 <h3 class="project-section-headings text-center text-md-left p-0">
-                  Editting default lanuguage
+                  Editing default lanuguage
                 </h3>
                 <p>
                   We also included features that allowed users to change the default closed caption and translation
@@ -698,98 +698,98 @@
               <div class="col-12 d-lg-none align-items-center justify-content-center" data-aos="fade-up"
                 data-aos-duration="1000" data-aos-delay="800">
                 <div style="padding:56.25% 0 0 0;position:relative;"><iframe
-                  src="https://player.vimeo.com/video/1009617540?h=8c10fb65cb&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
-                  frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"
-                  style="position:absolute;top:0;left:0;width:100%;height:100%;"
-                  title="New Recording - 15/09/2024, 15:33:08"></iframe></div>
-              <script src="https://player.vimeo.com/api/player.js"></script>
-              </div>
-                </div>
-              </div>
-            </div>
-        </section>
-
-        <!-- Live prototype-->
-        <section class="section-sm-ptb">
-          <div class="container ">
-            <div class="row">
-              <div class="col-12 mb-2" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-                <h3 class="project-section-headings text-center text-md-left p-0">
-                  Live Prototype
-                </h3>
-                <p>
-                  The following are live prototype of the lookup and translate feature and the Bookmark library.
-                  Please accept cookes and expand prototype for best viewing experience.
-                </p>
-              </div>
-              <div class="col-12 col-lg-6 mt-4 d-md-flex d-lg-block align-items-center justify-content-center"
-                data-aos="fade-right" data-aos-duration="1000" data-aos-delay="600">
-                <div class="embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" style="border: 1px solid rgba(0, 0, 0, 0.1);"
-                    src="https://embed.figma.com/proto/byQpEfzOzuTpzC1FN4fjIz/Team-6-Mid-Fidelity-prototype-Post-Research?node-id=22-17&node-type=frame&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=22%3A17&embed-host=share"
-                    allowfullscreen>
-                  </iframe>
-                </div>
-              </div>
-
-              <div class="col-12 col-lg-6 mt-4 d-md-flex d-lg-block align-items-center justify-content-center"
-                data-aos="fade-left" data-aos-duration="1000" data-aos-delay="800">
-                <div class="embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" style="border: 1px solid rgba(0, 0, 0, 0.1);"
-                    src="https://embed.figma.com/proto/byQpEfzOzuTpzC1FN4fjIz/Team-6-Mid-Fidelity-prototype-Post-Research?node-id=144-572&node-type=frame&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=144%3A572&embed-host=share"
-                    allowfullscreen>
-                  </iframe>
-                </div>
-              </div>
-
-            </div>
-          </div>
-        </section>
-
-
-        <!--Contact me-->
-        <section class="p-0">
-          <div class="container">
-            <div class="wrapper__contat-us position-relative bg__softblue" data-aos="fade-up" data-aos-duration="1000"
-              data-aos-delay="200">
-              <img src="./assets/images/Mask group (1).png" class="path__4" alt="" />
-              <div class="position-relative z-2">
-                <h2 class="bold font__size--65 text__60-1024 text__60-sm text__60-xxs mb-4">
-                  Do you think <br />
-                  <span class="position-relative path__3 extra"><span class="position-relative z-2">I'm a good
-                      fit?</span></span>
-                </h2>
-
-                <a href="https://www.linkedin.com/in/oluakani/"
-                  class="bold font__size--14 text__14-1024 btn btn__white color__black shadow rounded-50"
-                  target="blank">Contact me on LinkedIn</a>
+                    src="https://player.vimeo.com/video/1009617540?h=8c10fb65cb&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                    frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"
+                    style="position:absolute;top:0;left:0;width:100%;height:100%;"
+                    title="New Recording - 15/09/2024, 15:33:08"></iframe></div>
+                <script src="https://player.vimeo.com/api/player.js"></script>
               </div>
             </div>
           </div>
-        </section>
-
-        <section class="py-4">
-          <div class="container text-center">
-            <ul class="list__sosmed">
-              <li>
-                <a href="https://www.linkedin.com/in/oluakani/" target="blank"><img src="./assets/images/linkedin.svg"
-                    alt="" /></a>
-              </li>
-              <li>
-                <a href="https://github.com/Oakani1" target="blank"><img src="./assets/images/github.svg" alt="" /></a>
-              </li>
-
-            </ul>
-          </div>
-        </section>
       </div>
+    </section>
 
-      <script src="assets/js/jquery.min.js"></script>
-      <script src="assets/js/bootstrap.min.js"></script>
-      <script src="assets/js/popper.min.js"></script>
-      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
-      <script src="assets/js/index.js"></script>
+    <!-- Live prototype-->
+    <section class="section-sm-ptb">
+      <div class="container ">
+        <div class="row">
+          <div class="col-12 mb-2" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+            <h3 class="project-section-headings text-center text-md-left p-0">
+              Live Prototype
+            </h3>
+            <p>
+              The following are live prototype of the lookup and translate feature and the Bookmark library.
+              Please accept cookes and expand prototype for best viewing experience.
+            </p>
+          </div>
+          <div class="col-12 col-lg-6 mt-4 d-md-flex d-lg-block align-items-center justify-content-center"
+            data-aos="fade-right" data-aos-duration="1000" data-aos-delay="600">
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" style="border: 1px solid rgba(0, 0, 0, 0.1);"
+                src="https://embed.figma.com/proto/byQpEfzOzuTpzC1FN4fjIz/Team-6-Mid-Fidelity-prototype-Post-Research?node-id=22-17&node-type=frame&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=22%3A17&embed-host=share"
+                allowfullscreen>
+              </iframe>
+            </div>
+          </div>
+
+          <div class="col-12 col-lg-6 mt-4 d-md-flex d-lg-block align-items-center justify-content-center"
+            data-aos="fade-left" data-aos-duration="1000" data-aos-delay="800">
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" style="border: 1px solid rgba(0, 0, 0, 0.1);"
+                src="https://embed.figma.com/proto/byQpEfzOzuTpzC1FN4fjIz/Team-6-Mid-Fidelity-prototype-Post-Research?node-id=144-572&node-type=frame&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=144%3A572&embed-host=share"
+                allowfullscreen>
+              </iframe>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+
+    <!--Contact me-->
+    <section class="p-0">
+      <div class="container">
+        <div class="wrapper__contat-us position-relative bg__softblue" data-aos="fade-up" data-aos-duration="1000"
+          data-aos-delay="200">
+          <img src="./assets/images/Mask group (1).png" class="path__4" alt="" />
+          <div class="position-relative z-2">
+            <h2 class="bold font__size--65 text__60-1024 text__60-sm text__60-xxs mb-4">
+              Do you think <br />
+              <span class="position-relative path__3 extra"><span class="position-relative z-2">I'm a good
+                  fit?</span></span>
+            </h2>
+
+            <a href="https://www.linkedin.com/in/oluakani/"
+              class="bold font__size--14 text__14-1024 btn btn__white color__black shadow rounded-50"
+              target="blank">Contact me on LinkedIn</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="py-4">
+      <div class="container text-center">
+        <ul class="list__sosmed">
+          <li>
+            <a href="https://www.linkedin.com/in/oluakani/" target="blank"><img src="./assets/images/linkedin.svg"
+                alt="" /></a>
+          </li>
+          <li>
+            <a href="https://github.com/Oakani1" target="blank"><img src="./assets/images/github.svg" alt="" /></a>
+          </li>
+
+        </ul>
+      </div>
+    </section>
+  </div>
+
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
+  <script src="assets/js/popper.min.js"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+  <script src="assets/js/index.js"></script>
 </body>
 
 </html>
