langauge typo fix

--- a/sky.html
+++ b/sky.html
@@ -636,7 +636,7 @@
             <div class="row">
               <div class="col-lg-6 mb-2" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                 <h3 class="project-section-headings text-center text-md-left p-0">
-                  Editing default lanuguage
+                  Editing default language
                 </h3>
                 <p>
                   We also included features that allowed users to change the default closed caption and translation
