--- a/sky.html
+++ b/sky.html
@@ -111,14 +111,14 @@
               <div class="content col-12 col-md-6 col-lg-5">
                 <p class="project-detail-heading ">Role</p>
                 <p class="project-detail">
-                  Intern on Kings College Product manager Accelerator course
+                  Intern on Kings College Product manager Accelerator course.
                 </p>
                 <p class="project-detail-heading ">Team 6</p>
                 <p class="project-detail">
                   Christa Haindl,
                   Helen Okeke,
                   Niranjan Gadgil,
-                  Shraddha Mishra
+                  Shraddha Mishra.
 
               </div>
               <div class="content col-12 col-md-6 col-lg-4 align-items-center">
@@ -259,8 +259,8 @@
               Problems
             </h3>
             <div class="p-0" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-              <p>While our research uncovered a broad spectrum of challenges related to closed captioning on Sky Glass,
-                we strategically chose to prioritize addressing language-related needs</p>
+              <p>While our research identified a variety of challenges related to closed captioning on Sky Glass, we
+                strategically prioritized addressing language-related needs:</p>
               <ul>
                 <li><strong>Language Barriers:</strong> Non-native speakers face challenges understanding content due to
                   vocabulary, accents, and idioms.
@@ -313,7 +313,7 @@
             </h3>
             <p>
               The initial problem was investigated through a multi-faceted approach that included analyzing Sky's
-              Community customer complaints forum, User Personas provided by Sky and conducting in-depth user
+              Community customer complaints forum, user Personas provided by Sky and conducting in-depth user
               interviews, to understand their pains and
               gains.
               From the researech we were able to indenty several user personas who we could solve probmes for.
@@ -346,7 +346,7 @@
                 potential solutions, fostering a clear connection between each solution and the specific problem or
                 cause it addresses. After further brain storming we had over 30 ideas which we priorotised, finally
                 deciding to to focus on Language
-                accessibility
+                accessibility.
               </p>
             </div>
           </div>
@@ -379,7 +379,7 @@
 
               This often leads him to pause what he's watching to look up a word or ask his dad for help.
 
-              He expresses, "Being able to translate a word I haven't come across yet would aid my learning."
+              He says, "Being able to translate a word I haven't come across yet would aid my learning."
             </p>
 
           </div>
@@ -564,9 +564,9 @@
                 <h3 class="project-section-headings text-center text-md-left col-lg-6 p-0">
                   Solution
                 </h3>
-                <p>Our solution enhances accessibility, specifically focusing on users with language needs
+                <p>Our solution enhances accessibility, specifically focusing on users with language needs.
                   Users can select any closed caption text and instantly access its definition in the context of the
-                  sentence,
+                  sentence.
                   They can also choose additional support like translation.
                   Defined words and translations can be bookmarked for future reference as well</p>
                 <p class="bold p-0 m-0">Benefits to the user include</p>
@@ -719,7 +719,7 @@
             </h3>
             <p>
               The following are live prototype of the lookup and translate feature and the Bookmark library.
-              Please accept cookes and expand prototype for best viewing experience.
+              Please accept cookies and expand prototype for best viewing experience.
             </p>
           </div>
           <div class="col-12 col-lg-6 mt-4 d-md-flex d-lg-block align-items-center justify-content-center"
