fixes layout of promblem and solution

--- a/sky.html
+++ b/sky.html
@@ -253,7 +253,7 @@
     <section class="section-sm-ptb">
       <div class="container ">
         <div class="row d-flex justify-content-between">
-          <div class="col-md-6 mb-5">
+          <div class="col-lg-6 mb-5">
             <h3 class="project-section-headings text-center text-md-left  p-0" data-aos="fade-up"
               data-aos-duration="1000" data-aos-delay="200">
               Problems
@@ -276,7 +276,7 @@
 
             </div>
           </div>
-          <div class="col-md-6 mb-5">
+          <div class="col-lg-6 mb-5">
             <h3 class="project-section-headings text-center text-md-left  p-0" data-aos="fade-up"
               data-aos-duration="1000" data-aos-delay="600">
               Solution
